# collaborative-filtering

./: .gitignore  README.md  setup.cfg
collaborative_filtering/: dataset.py  evaluate.py  metrics.py  parameters.py  train.py  utils.py
collaborative_filtering/model/: __init__.py  mf.py  mlp.py
docs/source/: conf.py  index.rst
mf/: dataset.py  evaluate.py  loss.py  mf.py  parameters.py  train.py  utils.py
mf/utils/: __init__.py  other.py
tests/: test_dataset.py  test_loss.py  test_parameters.py
