[metadata]
name = collaborative-filtering
version = attr: collaborative_filtering.__version__
author = yusanshi
author_email = meet.leiyu@gmail.com
description = A package for collaborative filtering recommendation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yusanshi/collaborative-filtering
project_urls =
    Bug Tracker = https://github.com/yusanshi/collaborative-filtering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    torch
    pandas
    numpy
    tqdm
    tensorboard
    enlighten
    coloredlogs

[options.packages.find]
where = .
